Changed 1st Line in About

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </header>
             <section class="about">
                 <h1 id="about">About Me</h1>
-                <p class="side">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas quae deserunt eaque rem sapiente quis, quaerat adipisci aliquam accusamus error ab, minus, laudantium tempore fugiat maiores. Nam sit voluptatum, voluptate.</p>
+                <p class="side"> I grew up in the Caribbean and came to Miami, Fl in 2018 to attend the Univeristy of Miami.</p>
                 <br>
                 <p class="side">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur sunt veritatis nobis magni animi consequatur nesciunt, quam iure libero maiores similique aut voluptates odit perspiciatis natus illum expedita quasi. Cum.</p>
                 <br>
