Changes to About and adding strong tag styles

--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
             <header class="main-header">
                 <p>Hi, my name is</p>
                 <h1 id="head">Joshua Welsh.</h1>
-                <h3>I am a software engineer.</h3>
+                <h3>I am a Software Engineer.</h3>
                 <a href="" id="email">joshjwelsh@engineer.com</a>
             </header>
             <section class="about">
                 <h1 id="about">About Me</h1>
-                <p class="side"> I grew up in the Caribbean and came to Miami, Fl in 2018 to attend the Univeristy of Miami.</p>
+                <p class="side"> I grew up in the Caribbean and came to Miami, Florida in 2018 to attend the <strong>Univeristy of Miami</strong>. At university I study
+                Mathematics, Economics and Computer Science.</p>
                 <br>
-                <p class="side">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur sunt veritatis nobis magni animi consequatur nesciunt, quam iure libero maiores similique aut voluptates odit perspiciatis natus illum expedita quasi. Cum.</p>
+                <p class="side">Programming as a hobby over the years has become a big part of my life - working on <strong>data analysis</strong> and <strong>full stack development</strong>.</p>
                 <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, modi?</p>
+                <p>I don't only design, build and implement software, I am a member of the fraternity <strong>Sigma Alpha Mu</strong>, and my interests outside of coding are gaming, sports and reading.</p>
             </section>
             <section class="container">
                 <ul id="list-1">
