Adding classes strong tag and color

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             </header>
             <section class="about">
                 <h1 id="about">About Me</h1>
-                <p class="side"> I grew up in the Caribbean and came to Miami, Florida in 2018 to attend the <strong>Univeristy of Miami</strong>. At university I study
+                <p class="side"> I grew up in the Caribbean and came to Miami, Florida in 2018 to attend the <strong class="strong-text">Univeristy of Miami</strong>. At university I study
                 Mathematics, Economics and Computer Science.</p>
                 <br>
-                <p class="side">Programming as a hobby over the years has become a big part of my life - working on <strong>data analysis</strong> and <strong>full stack development</strong>.</p>
+                <p class="side">Programming as a hobby over the years has become a big part of my life - working on <strong class="strong-text">data analysis</strong> and <strong class="strong-text">full stack development</strong>.</p>
                 <br>
-                <p>I don't only design, build and implement software, I am a member of the fraternity <strong>Sigma Alpha Mu</strong>, and my interests outside of coding are gaming, sports and reading.</p>
+                <p>I don't only design, build and implement software, I am a member of the fraternity <strong class="strong-text">Sigma Alpha Mu</strong>, and my interests outside of coding are gaming, sports and reading.</p>
             </section>
             <section class="container">
                 <ul id="list-1">
