adding consulting.html and css, also updated index and css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="side"
             href="#">code</a>
             <a class="side" href="#">blog</a>
-            <a class="side" href="#">consulting</a>
+            <a class="side" href="consulting.html">consulting</a>
         </div>
         <div class="content">
             <header class="main-header">
