Changes to consulting tab

--- a/consulting.html
+++ b/consulting.html
@@ -54,7 +54,7 @@
                 </header>
                 <p>
                     In the modern world, the only way to compete with massive companies like Amazon is to make it as easy and convenient for users to purchase items from your website. With the help from my design partner
-                    <a href="https://talonsmith.myportfolio.com/">Talon Smith</a> we will build a responsive, well-designed website for your personal or business needs.
+                    <a href="https://talonsmith.myportfolio.com/">Talon Smith</a> we will build a responsive, well-designed website or web apps for your personal or business needs.
                 </p>
                 <p>
                     Rate: $30/hr
