consulting tab can navigate to home tab

--- a/consulting.html
+++ b/consulting.html
@@ -21,7 +21,7 @@
                 href="#">Code</a>
             </li>
             <li class="home">
-                <a class="side" href="#">Home</a>
+                <a class="side" href="index.html">Home</a>
             </li>
             <li class="contact">
                 <a class="side" href="#">Contact</a>
