--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="https://github.com/joshjwelsh" class="github">joshjwelsh</a>
             <a class="side"
             href="#">code</a>
-            <a class="side" href="#">blog</a>
+<!--             <a class="side" href="#">blog</a> -->
             <a class="side" href="consulting.html">consulting</a>
         </div>
         <div class="content">
