Added coding page and all its resources

--- a/consulting.html
+++ b/consulting.html
@@ -18,7 +18,7 @@
             </li>
             <li class="code">
                 <a class="side"
-                href="#">Code</a>
+                href="code.html">Code</a>
             </li>
             <li class="home">
                 <a class="side" href="index.html">Home</a>
@@ -31,7 +31,7 @@
             <section class="info">
                 <h4>README.txt</h4>
                 <p>I offer individuals and small business specialized software solutions such as
-                    websites, data aggregation, web scrapping and automation tools.
+                    websites, data aggregation, web scraping and automation tools.
                     The first consulting meeting is free of charge. If the software solution you desire cannot be
                     completed or the solution is outside my scope. I will recommend an engineer better suited and a <strong>full refund</strong>.
                 </p>
@@ -42,7 +42,7 @@
                 </header>
                 <p>
                     Data aggregation is the process of gathering data and presenting it in a summarized format. The data may be gathered from multiple data sources with the intent of combining these data sources into a summary for analysis.
-                    For example: competitive price monitoring, fiancial charts and data, and demographics on customers.
+                    By using data and modern technology data aggregation allows you to find competitive prices
                 </p>
                 <p>
                     Rate: $50/hr
@@ -54,10 +54,10 @@
                 </header>
                 <p>
                     In the modern world, the only way to compete with massive companies like Amazon is to make it as easy and convenient for users to purchase items from your website. With the help from my design partner
-                    <a href="https://talonsmith.myportfolio.com/">Talon Smith</a> we will build a responsive, well-designed website or web apps for your personal or business needs.
+                    <strong><a href="https://talonsmith.myportfolio.com/">Talon Smith</a></strong> we will build a responsive, well-designed website or web apps for your personal or business needs.
                 </p>
                 <p>
-                    Rate: $30/hr
+                    Rate: $40/hr
                 </p>
             </section>
             <section class="content-3">
