--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="header">
             <a href="https://github.com/joshjwelsh" class="github">joshjwelsh</a>
             <a class="side"
-            href="#">code</a>
+            href="code.html">code</a>
             <a class="side" href="#">blog</a>
             <a class="side" href="consulting.html">consulting</a>
         </div>
