Updated index.html. Fixed a conflict.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,8 @@
     <div class="grid">
         <div class="header">
             <a href="https://github.com/joshjwelsh" class="github">joshjwelsh</a>
-            <a class="side"
-<<<<<<< HEAD
-            href="code.html">code</a>
+            <a class="side" href="code.html">code</a>
             <a class="side" href="#">blog</a>
-=======
-           
-<!--             <a class="side" href="#">blog</a> -->
->>>>>>> 05ff70495f0851465c2850901d89171a101bee6c
             <a class="side" href="consulting.html">consulting</a>
         </div>
         <div class="content">
@@ -41,9 +35,10 @@
                 <ul id="list-1">
                     <h2>Languages</h2>
                     <li>Python</li>
+                    <li>C++ and C</li>
                     <li>Java</li>
                     <li>HTML/CSS</li>
-                    <li>C#</li>
+                    <li>SQL</li>
                 </ul>
                 <ul id="list-2">
                     <h2>Framework</h2>
@@ -51,6 +46,7 @@
                     <li>Django/Flask</li>
                     <li>Scrapy</li>
                     <li>Matplotlib</li>
+                    <li>OpenCV</li>
 
                 </ul>
             </section>
