--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <li>SQL</li>
                 </ul>
                 <ul id="list-2">
-                    <h2>Framework</h2>
+                    <h2>Frameworks</h2>
                     <li>Pandas</li>
                     <li>Django/Flask</li>
                     <li>Scrapy</li>
