--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </header>
             <section class="about">
                 <h1 id="about">About Me</h1>
-                <p class="side"> I grew up in the Caribbean and came to Miami, Florida in 2018 to attend the <strong class="strong-text">Univeristy of Miami</strong>. At university I study
+                <p class="side"> I grew up in the Caribbean and came to Miami, Florida in 2018 to attend the <strong class="strong-text">University of Miami</strong>. At university I study
                 Mathematics, Economics and Computer Science.</p>
                 <br>
                 <p class="side">Programming as a hobby over the years has become a big part of my life - working on <strong class="strong-text">data analysis</strong> and <strong class="strong-text">full stack development</strong>.</p>
