--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             </header>
             <section class="about">
                 <h1 id="about">About Me</h1>
-                <p class="side"> I grew up in the Caribbean and came to Miami, Florida in 2018 to attend the <strong class="strong-text">University of Miami</strong>. At university I study
-                Mathematics, Economics and Computer Science.</p>
+                <p class="side"> I grew up in Trinidad and Tobago, and came to Miami, Florida in 2018 to attend the <strong class="strong-text">University of Miami</strong>. At university I
+                study computer science, mathematics and economics.</p>
                 <br>
-                <p class="side">Programming as a hobby over the years has become a big part of my life - working on <strong class="strong-text">data analysis</strong> and <strong class="strong-text">full stack development</strong>.</p>
+                <p class="side">Over the years, programming has become a bigger part of my life. Currently my interests lie in the fields of <strong class="strong-text">data science</strong>and <strong class="strong-text">full stack development</strong>.</p>
                 <br>
                 <p>I don't only design, build and implement software, I am a member of the fraternity <strong class="strong-text">Sigma Alpha Mu</strong>, and my interests outside of coding are gaming, sports and reading.</p>
             </section>
